--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A YouTube client application."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 0.6.0+1
+version: 0.6.5+1
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
@@ -11,6 +11,7 @@ environment:
 dependencies:
   awesome_bottom_bar: ^1.2.4
   better_player: ^0.0.84
+  cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
   dio: ^5.4.3+1
@@ -39,6 +40,7 @@ dependencies:
   share_plus: ^9.0.0
   simple_html_css: ^5.0.0
   url_launcher: ^6.3.0
+  youtube_explode_dart: ^2.2.1
 
 dev_dependencies:
   build_runner: ^2.4.10
