--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A YouTube client application."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 0.6.7+2
+version: 0.6.8+3
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
@@ -22,11 +22,11 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_settings_ui: ^3.0.1
+  flutter_svg: ^2.0.10+1
   fluttertoast: ^8.2.6
   freezed_annotation: ^2.4.1
   get_it: ^7.7.0
   go_router: ^14.1.3
-  google_fonts: 6.1.0
   injectable: ^2.4.2
   intl: ^0.19.0
   isar: ^3.1.0+1
@@ -61,6 +61,15 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/icons/
+
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-Regular.ttf
+    - family: Knewave
+      fonts:
+        - asset: assets/fonts/Knewave-Regular.ttf
 
 flutter_intl:
   enabled: true
