--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.1.3
   readmore: ^3.0.0
   share_plus: ^9.0.0
+  shimmer: ^3.0.0
   simple_html_css: ^5.0.0
   url_launcher: ^6.3.0
   youtube_explode_dart: ^2.2.1
