--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "A YouTube client application."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 0.6.9+4
+version: 0.7.0+5
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
@@ -38,6 +38,7 @@ dependencies:
   package_info_plus: ^8.0.0
   path_provider: ^2.1.3
   readmore: ^3.0.0
+  rich_readmore: ^1.1.1
   share_plus: ^9.0.0
   shimmer: ^3.0.0
   simple_html_css: ^5.0.0
