--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   simple_html_css: ^5.0.0
   url_launcher: ^6.3.0
   youtube_explode_dart: ^2.2.1
+  youtube_player_iframe: ^5.1.3
 
 dev_dependencies:
   build_runner: ^2.4.10
