--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   fluttertoast: ^8.2.6
   freezed_annotation: ^2.4.1
-  get_it: ^7.7.0
+  get_it: ^8.0.0
   go_router: ^14.1.3
   injectable: ^2.4.2
   intl: ^0.19.0
@@ -40,20 +40,21 @@ dependencies:
   path_provider: ^2.1.3
   readmore: ^3.0.0
   rich_readmore: ^1.1.1
-  share_plus: ^9.0.0
+  share_plus: ^10.0.3
   shimmer: ^3.0.0
   simple_html_css: ^5.0.0
+  talker_bloc_logger: ^4.4.1
   url_launcher: ^6.3.0
   youtube_explode_dart: ^2.2.1
-  youtube_player_iframe: ^5.1.3
+  youtube_player_iframe: ^5.2.0
 
 dev_dependencies:
   build_runner: ^2.4.10
-  flutter_launcher_icons: ^0.13.1
-  flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.14.1
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  freezed: 2.5.2
+  freezed: ^2.5.7
   injectable_generator: ^2.6.1
   intl_translation: ^0.20.0
   isar_generator: any
