--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ version: 0.7.1+6
 environment:
   sdk: '>=3.3.1 <4.0.0'
 
+isar_version: &isar_version 3.1.8
+
 dependencies:
   awesome_bottom_bar: ^1.2.4
   better_player: ^0.0.84
@@ -30,8 +32,12 @@ dependencies:
   go_router: ^14.1.3
   injectable: ^2.4.2
   intl: ^0.19.0
-  isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
+  isar: 
+    version: *isar_version
+    hosted: https://pub.isar-community.dev/
+  isar_flutter_libs: # contains Isar Core
+    version: *isar_version
+    hosted: https://pub.isar-community.dev/
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
   lottie: ^3.1.2
@@ -57,7 +63,9 @@ dev_dependencies:
   freezed: ^2.5.7
   injectable_generator: ^2.6.1
   intl_translation: ^0.20.0
-  isar_generator: any
+  isar_generator: 
+    version: *isar_version
+    hosted: https://pub.isar-community.dev/
 
 dependency_overrides:
   analyzer: ^6.4.1
